#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#bruno quoitin Mons

AC_PREREQ([2.68])
AC_INIT([netwatcher-extractor], [1.0], [https://github.com/djo938/NetWatcher/issues])

AC_CONFIG_SRCDIR([core.c])


AC_CONFIG_HEADERS([config.h])

#indique a automake de s'initialiser
AM_INIT_AUTOMAKE(netwatcher-extractor, 1.0)

#on indique qu'il y a des librairies
AC_PROG_RANLIB

# Checks for programs.
AC_PROG_CC([gcc llvm-gcc])
AM_PROG_CC_C_O
AC_PROG_MAKE_SET

#le programme ne supporte pas le big endian
AC_C_BIGENDIAN([exit])

# Checks for libraries.
AC_CHECK_LIB([m], [lround],[],[exit])
AC_CHECK_LIB([pcap], [pcap_open_live],[],[exit])
AC_CHECK_LIB([readline], [readline],[],[exit])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h inttypes.h limits.h netinet/in.h stdlib.h string.h strings.h sys/socket.h sys/time.h unistd.h pcap/pcap.h pcap.h stdio.h dirent.h signal.h sys/sem.h stdarg.h sys/stat.h time.h sys/types.h sys/uio.h math.h errno.h sys/shm.h netinet/ip.h ifaddrs.h stdint.h sys/select.h])

#TODO check a recent libcap version


# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_CHECK_FUNCS([bzero gettimeofday inet_ntoa memset pow select socket sqrt strtol semctl signal fprintf pcap_close open opendir shmctl fstat ctime getifaddrs])

AC_CONFIG_FILES([makefile])
AC_OUTPUT
